--- a/Assignment2/Part2/Makefile
+++ b/Assignment2/Part2/Makefile
@@ -1,11 +1,13 @@
 
 CC=gcc
-CFLAGS=-Wall -Werror -Wvla -O0 --pedantic -std=gnu99 -g -fsanitize=address -lm
-EXC=mab.c 
-#pcb.c mlq.c
+CFLAGS=-Wall -Werror -Wvla -O0 --pedantic -std=gnu99 -g -lm
+EXC=mab.c pcb.c mlq.c
 
 # compiles the program
-all:
-	$(CC) $(CFLAGS) $(EXC) -o mab
-	./mab	
-#./mlq random_mid.txt
+test_mlq:
+	$(CC) $(CFLAGS) $(EXC) -o mlq
+	./mlq random_mid.txt
+
+test_mab:
+	$(CC) $(CFLAGS) mab.c -o mab
+	./mab
