it actually working we balling so hard here

--- a/Assignment2/Part2/Makefile
+++ b/Assignment2/Part2/Makefile
@@ -1,13 +1,13 @@
 
 CC=gcc
-CFLAGS=-Wall -Werror -Wvla -O0 --pedantic -std=gnu99 -g -lm
+CFLAGS=-Wall -Werror -Wvla -O0 --pedantic -std=gnu99 -g
 EXC=mab.c pcb.c mlq.c
 
 # compiles the program
 test_mlq:
-	$(CC) $(CFLAGS) $(EXC) -o mlq
+	$(CC) $(CFLAGS) -o mlq $(EXC) -lm
 	./mlq random_mid.txt
 
 test_mab:
-	$(CC) $(CFLAGS) mab.c -o mab
+	$(CC) $(CFLAGS) -o mab mab.c -lm
 	./mab
