--- a/Assignment2/Part1/Makefile
+++ b/Assignment2/Part1/Makefile
@@ -1,6 +1,6 @@
 
 CC=gcc
-CFLAGS=-Wall -Werror -Wvla -O0 --pedantic -std=gnu99 -g -fsanitize=address
+CFLAGS=-Wall -Werror -Wvla -O0 --pedantic -std=gnu99 -g -fsanitize=address -lpthread
 EXC=pcb.c mlq.c
 
 # compiles the program
